adjusted all the hierachy of the headings, making sure there is no break between the used h1 to h6 / added variables for font sizes, since I had styled the headings / Adjusted caps on the flota.html page

--- a/html/comoreservar.html
+++ b/html/comoreservar.html
@@ -56,42 +56,42 @@
     </header>
     <main>
         <section>
-            <h1 class="fontColorOne spaceOne">Como reservar con Aspen Rent a Car?</h1>
+            <h1 class="fontColorOne spaceOne fontSizeOne">Como reservar con Aspen Rent a Car?</h1>
             <div class="containerThree">
                 <div class="containerEight">
                     <img src="../img/uno.jpg" alt="icono con el numero 1" class="imageThirdteen">
                     <img src="../img/autonegro.jpg" alt="icono de un auto">
-                    <h4><span class="fontColorOne">Nuestra Flota</span></h4>
-                    <p>Chequea nuestra flota y decide cual se ajusta a tus necesidades</p>
+                    <h2><span class="fontColorOne fontSizeThree">Nuestra Flota</span></h2>
+                    <p class="fontSizeFive">Chequea nuestra flota y decide cual se ajusta a tus necesidades</p>
                 </div>
                 <div class="containerEight">
                     <img src="../img/dos.jpg" alt="icono con el numero 2" class="imageThirdteen">
                     <img src="../img/signopregunta.jpg" alt="icono de un signo de pregunta>">
-                    <h4><span class="fontColorOne">Condiciones generales y FAQ's</span></h4>
-                    <p>Asegurate de leer los Términos y Condiciones generales.</p>
-                    <p>Si aún tienes dudas, encontrarás la sección dedicada preguntas frequentes</p>
+                    <h2><span class="fontColorOne fontSizeThree">Condiciones generales y FAQ's</span></h2>
+                    <p class="fontSizeFive">Asegurate de leer los Términos y Condiciones generales.</p>
+                    <p class="fontSizeFive">Si aún tienes dudas, encontrarás la sección dedicada preguntas frequentes</p>
                 </div>
                 <div class="containerEight">
                     <img src="../img/tres.jpg" alt="icono con el numero 3" class="imageThirdteen">
                     <img src="../img/Calendario.jpg" alt="icono de un calendario">
-                    <h4><span class="fontColorOne">Consultar disponibilidad</span></h4>
-                    <p>Haz click en Consultar Disponibilidad y completa el formulario con todos los datos solicitados
+                    <h2><span class="fontColorOne fontSizeThree">Consultar disponibilidad</span></h2>
+                    <p class="fontSizeFive">Haz click en Consultar Disponibilidad y completa el formulario con todos los datos solicitados
                     </p>
-                    <p>En un plazo de 24 horas, nuestro equipo de Reservas confirmara la disponibilidad para que puedas
+                    <p class="fontSizeFive">En un plazo de 24 horas, nuestro equipo de Reservas confirmara la disponibilidad para que puedas
                         efectuar
                         el pago de tu reserva según condiciones.</p>
                 </div>
                 <div class="containerEight">
                     <img src="../img/cuatro.jpg" alt="icono con el numero 4" class="imageThirdteen">
                     <img src="../img/tick.jpg" alt="Icono de un tilde">
-                    <h4><span class="fontColorOne">Confirmacion de reserva</span></h4>
-                    <p>Confirmado el pago, recibirás un correo de confirmación con todos los datos de tu reserva.</p>
+                    <h2><span class="fontColorOne fontSizeThree">Confirmacion de reserva</span></h2>
+                    <p class="fontSizeFive">Confirmado el pago, recibirás un correo de confirmación con todos los datos de tu reserva.</p>
                 </div>
                 <div>
                     <img src="../img/stars.jpg" alt="icono de unas estrellas">
-                    <p>No te olvides de chequear nuestra sección de Recorridos sugeridos, no solo para Puerto Iguazu,
+                    <p class="fontSizeFive">No te olvides de chequear nuestra sección de Recorridos sugeridos, no solo para Puerto Iguazu,
                         también para Misiones y Brasil</p>
-                    <p>Asegurate de sacar el máximo provecho de tu alquiler y no dejes de conocer bellezas escóndidas de
+                    <p class="fontSizeFive">Asegurate de sacar el máximo provecho de tu alquiler y no dejes de conocer bellezas escóndidas de
                         nuestra región</p>
                 </div>
             </div>
