--- a/html/condiciones.html
+++ b/html/condiciones.html
@@ -58,60 +58,60 @@
     </header>
     <main>
         <section>
-            <h1 class="fontColorOne">Terminos y Condiciones generales de alquiler</h1>
-            <h4 class="fontColorThree">Condiciones del Alquier</h4>
+            <h1 class="fontColorOne fontSizeOne">Terminos y Condiciones generales de alquiler</h1>
+            <h4 class="fontColorThree fontSizeThree">Condiciones del Alquier</h4>
             <ul>
-                <li>Ser mayor de 21 anhos</li>
-                <li>Documento de Identidad</li>
-                <li>Registro de conducir en vigencia</li>
-                <li>Tarjeta de crédito (propia o de un garante presente)</li>
-                <li>duracion minima de alquiler de 48 horas</li>
+                <li class="fontSizeFive">Ser mayor de 21 anhos</li>
+                <li class="fontSizeFive">Documento de Identidad</li>
+                <li class="fontSizeFive">Registro de conducir en vigencia</li>
+                <li class="fontSizeFive">Tarjeta de crédito (propia o de un garante presente)</li>
+                <li class="fontSizeFive">duracion minima de alquiler de 48 horas</li>
             </ul>
-            <h4 class="fontColorThree">Entrega de unidades</h4>
+            <h4 class="fontColorThree fontSizeThree">Entrega de unidades</h4>
             <ul>
-                <li>El retiro y devolucion de los vehiculos se realiza en nuestro local de Puerto Iguazu</li>
-                <li>Las entregas y devoluciones en el aeropuerto Puerto Iguazu tendrán un costo adicional </li>
-                <li>Los vehiculos se entregan con el tanque lleno y deberan ser devueltos de la misma manera</li>
+                <li class="fontSizeFive">El retiro y devolucion de los vehiculos se realiza en nuestro local de Puerto Iguazu</li>
+                <li class="fontSizeFive">Las entregas y devoluciones en el aeropuerto Puerto Iguazu tendrán un costo adicional </li>
+                <li class="fontSizeFive">Los vehiculos se entregan con el tanque lleno y deberan ser devueltos de la misma manera</li>
             </ul>
-            <h4 class="fontColorThree">Aclaraciones</h4>
+            <h4 class="fontColorThree fontSizeThree">Aclaraciones</h4>
             <ul>
-                <li>Las reservas serán atendidas con automóviles de la misma categoría o, en caso de no haber
+                <li class="fontSizeFive">Las reservas serán atendidas con automóviles de la misma categoría o, en caso de no haber
                     disponibilidad, se entregará un vehículo de una categoría superior.</li>
-                <li>El vehículo alquilado sólo podrá ser conducido por el titular del contrato de alquiler, o quien éste
+                <li class="fontSizeFive">El vehículo alquilado sólo podrá ser conducido por el titular del contrato de alquiler, o quien éste
                     haya
                     autorizado con anterioridad.</li>
-                <li>Ninguna solicitud de reserva es válida sin la confirmación de Aspen Rent a Car mediante número de
+                <li class="fontSizeFive">Ninguna solicitud de reserva es válida sin la confirmación de Aspen Rent a Car mediante número de
                     Reserva.
                 </li>
-                <li>La devolución del auto se contempla con 1 (una) hora de tolerancia para su devolución. Pasada la
+                <li class="fontSizeFive">La devolución del auto se contempla con 1 (una) hora de tolerancia para su devolución. Pasada la
                     hora de
                     tolerancia se cobrará 1/2 (medio) día de alquiler. Excedidas las 5 (cinco) horas se cobrará 1 (un)
                     día
                     completo de alquiler.</li>
             </ul>
-            <h4 class="fontColorThree">Formas de Pago</h4>
+            <h4 class="fontColorThree fontSizeThree">Formas de Pago</h4>
             <ul>
-                <li>Los medios de pago aceptados son tarjetas Visa, MasterCard,
+                <li class="fontSizeFive">Los medios de pago aceptados son tarjetas Visa, MasterCard,
                     American Express o Previaje. Asimismo con transferencia bancaria,
                     Mercado Pago o en efectivo.</li>
-                <li>Los Alquileres se abonan por adelantado, cualquiera sea la forma
+                <li class="fontSizeFive">Los Alquileres se abonan por adelantado, cualquiera sea la forma
                     de pago.</li>
-                <li>Todas las tarifas incluyen el 21% de IVA.</li>
+                <li class="fontSizeFive">Todas las tarifas incluyen el 21% de IVA.</li>
             </ul>
         </section>
         <section>
             <h2 class="fontColorOne">Preguntas Frequentes</h2>
-            <h3 class="fontColorThree">Preguntas - Previo a la reserva</h3>
+            <h3 class="fontColorThree fontSizeThree">Preguntas - Previo a la reserva</h3>
             <!-- Aca quiero meter un acordeon por cada pregunta, pero todavia no tengo ese conocimiento. Mientras pongo un parrafo -->
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor voluptatibus quo impedit natus ipsum
                 laudantium necessitatibus! Libero explicabo voluptates maxime neque et necessitatibus modi blanditiis.
                 Placeat, eos cum? Esse, nihil!</p>
-            <h3 class="fontColorThree">Preguntas - Durante la reserva</h3>
+            <h3 class="fontColorThree fontSizeThree">Preguntas - Durante la reserva</h3>
             <!-- Aca quiero meter un acordeon por cada pregunta, pero todavia no tengo ese conocimiento. Mientras pongo un parrafo -->
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor voluptatibus quo impedit natus ipsum
                 laudantium necessitatibus! Libero explicabo voluptates maxime neque et necessitatibus modi blanditiis.
                 Placeat, eos cum? Esse, nihil!</p>
-            <h3 class="fontColorThree">Preguntas - Despues de la reserva</h3>
+            <h3 class="fontColorThree fontSizeThree">Preguntas - Despues de la reserva</h3>
             <!-- Aca quiero meter un acordeon por cada pregunta, pero todavia no tengo ese conocimiento. Mientras pongo un parrafo -->
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor voluptatibus quo impedit natus ipsum
                 laudantium necessitatibus! Libero explicabo voluptates maxime neque et necessitatibus modi blanditiis.
