--- a/html/contacto.html
+++ b/html/contacto.html
@@ -59,7 +59,7 @@
         <form>
             <fieldset>
                 <div class="containerNine">
-                    <legend class="fontColorOne">Datos Personales</legend>
+                    <h1><legend class="fontColorOne fontSizeThree">Datos Personales</legend></h1>
                     <div class="spaceOne">
                         <input type="text" id="nombre" name="nombre" placeholder="Nombre" required class="widthOne">
                     </div>
@@ -84,7 +84,7 @@
             
             <fieldset>
                 <div class="containerNine">
-                    <legend class="fontColorOne">Comentarios</legend>
+                    <legend class="fontColorOne fontSizeThree">Comentarios</legend>
                     <textarea name="message"
                         placeholder="Deje aqui cualquier comentario adicional o requerimiento extra no cubierto en este formulario"
                         class="widthOne"></textarea>
