--- a/html/reservar.html
+++ b/html/reservar.html
@@ -61,7 +61,7 @@
         <form>
             <fieldset>
                 <div class="containerNine">
-                    <legend class="fontColorOne">Datos Personales</legend>
+                    <h1><legend class="fontColorOne fontSizeThree">Datos Personales</legend></h1>
                     <div class="spaceOne">
                         <input type="text" id="nombre" name="nombre" placeholder="Nombre" required class="widthOne">
                     </div>
@@ -85,7 +85,7 @@
 
             <fieldset>
                 <div class="containerNine">
-                    <legend class="fontColorOne">Datos de su reserva</legend>
+                    <legend class="fontColorOne fontSizeThree">Datos de su reserva</legend>
                     <p>Motivo de viaje:</p>
                     <input type="radio" id="viaje de negocios" name="motivo de viaje"><label for="viaje de negocios">
                         viaje de
