adjusted the format in all documents to have clean code

--- a/html/comoreservar.html
+++ b/html/comoreservar.html
@@ -69,15 +69,18 @@
                     <img src="../img/signopregunta.jpg" alt="icono de un signo de pregunta>">
                     <h2><span class="fontColorOne fontSizeThree">Condiciones generales y FAQ's</span></h2>
                     <p class="fontSizeFive">Asegurate de leer los Términos y Condiciones generales.</p>
-                    <p class="fontSizeFive">Si aún tienes dudas, encontrarás la sección dedicada preguntas frequentes</p>
+                    <p class="fontSizeFive">Si aún tienes dudas, encontrarás la sección dedicada preguntas frequentes
+                    </p>
                 </div>
                 <div class="containerEight">
                     <img src="../img/tres.jpg" alt="icono con el numero 3" class="imageThirdteen">
                     <img src="../img/Calendario.jpg" alt="icono de un calendario">
                     <h2><span class="fontColorOne fontSizeThree">Consultar disponibilidad</span></h2>
-                    <p class="fontSizeFive">Haz click en Consultar Disponibilidad y completa el formulario con todos los datos solicitados
+                    <p class="fontSizeFive">Haz click en Consultar Disponibilidad y completa el formulario con todos los
+                        datos solicitados
                     </p>
-                    <p class="fontSizeFive">En un plazo de 24 horas, nuestro equipo de Reservas confirmara la disponibilidad para que puedas
+                    <p class="fontSizeFive">En un plazo de 24 horas, nuestro equipo de Reservas confirmara la
+                        disponibilidad para que puedas
                         efectuar
                         el pago de tu reserva según condiciones.</p>
                 </div>
@@ -85,13 +88,16 @@
                     <img src="../img/cuatro.jpg" alt="icono con el numero 4" class="imageThirdteen">
                     <img src="../img/tick.jpg" alt="Icono de un tilde">
                     <h2><span class="fontColorOne fontSizeThree">Confirmacion de reserva</span></h2>
-                    <p class="fontSizeFive">Confirmado el pago, recibirás un correo de confirmación con todos los datos de tu reserva.</p>
+                    <p class="fontSizeFive">Confirmado el pago, recibirás un correo de confirmación con todos los datos
+                        de tu reserva.</p>
                 </div>
                 <div>
                     <img src="../img/stars.jpg" alt="icono de unas estrellas">
-                    <p class="fontSizeFive">No te olvides de chequear nuestra sección de Recorridos sugeridos, no solo para Puerto Iguazu,
+                    <p class="fontSizeFive">No te olvides de chequear nuestra sección de Recorridos sugeridos, no solo
+                        para Puerto Iguazu,
                         también para Misiones y Brasil</p>
-                    <p class="fontSizeFive">Asegurate de sacar el máximo provecho de tu alquiler y no dejes de conocer bellezas escóndidas de
+                    <p class="fontSizeFive">Asegurate de sacar el máximo provecho de tu alquiler y no dejes de conocer
+                        bellezas escóndidas de
                         nuestra región</p>
                 </div>
             </div>
