--- a/html/condiciones.html
+++ b/html/condiciones.html
@@ -69,21 +69,28 @@
             </ul>
             <h4 class="fontColorThree fontSizeThree">Entrega de unidades</h4>
             <ul>
-                <li class="fontSizeFive">El retiro y devolucion de los vehiculos se realiza en nuestro local de Puerto Iguazu</li>
-                <li class="fontSizeFive">Las entregas y devoluciones en el aeropuerto Puerto Iguazu tendrán un costo adicional </li>
-                <li class="fontSizeFive">Los vehiculos se entregan con el tanque lleno y deberan ser devueltos de la misma manera</li>
+                <li class="fontSizeFive">El retiro y devolucion de los vehiculos se realiza en nuestro local de Puerto
+                    Iguazu</li>
+                <li class="fontSizeFive">Las entregas y devoluciones en el aeropuerto Puerto Iguazu tendrán un costo
+                    adicional </li>
+                <li class="fontSizeFive">Los vehiculos se entregan con el tanque lleno y deberan ser devueltos de la
+                    misma manera</li>
             </ul>
             <h4 class="fontColorThree fontSizeThree">Aclaraciones</h4>
             <ul>
-                <li class="fontSizeFive">Las reservas serán atendidas con automóviles de la misma categoría o, en caso de no haber
+                <li class="fontSizeFive">Las reservas serán atendidas con automóviles de la misma categoría o, en caso
+                    de no haber
                     disponibilidad, se entregará un vehículo de una categoría superior.</li>
-                <li class="fontSizeFive">El vehículo alquilado sólo podrá ser conducido por el titular del contrato de alquiler, o quien éste
+                <li class="fontSizeFive">El vehículo alquilado sólo podrá ser conducido por el titular del contrato de
+                    alquiler, o quien éste
                     haya
                     autorizado con anterioridad.</li>
-                <li class="fontSizeFive">Ninguna solicitud de reserva es válida sin la confirmación de Aspen Rent a Car mediante número de
+                <li class="fontSizeFive">Ninguna solicitud de reserva es válida sin la confirmación de Aspen Rent a Car
+                    mediante número de
                     Reserva.
                 </li>
-                <li class="fontSizeFive">La devolución del auto se contempla con 1 (una) hora de tolerancia para su devolución. Pasada la
+                <li class="fontSizeFive">La devolución del auto se contempla con 1 (una) hora de tolerancia para su
+                    devolución. Pasada la
                     hora de
                     tolerancia se cobrará 1/2 (medio) día de alquiler. Excedidas las 5 (cinco) horas se cobrará 1 (un)
                     día
@@ -99,7 +106,7 @@
                 <li class="fontSizeFive">Todas las tarifas incluyen el 21% de IVA.</li>
             </ul>
         </section>
-            </main>
+    </main>
     <hr>
     <footer>
         <div class="containerTwelve">
