--- a/html/reservar.html
+++ b/html/reservar.html
@@ -61,7 +61,9 @@
         <form>
             <fieldset>
                 <div class="containerNine">
-                    <h1><legend class="fontColorOne fontSizeThree">Datos Personales</legend></h1>
+                    <h1>
+                        <legend class="fontColorOne fontSizeThree">Datos Personales</legend>
+                    </h1>
                     <div class="spaceOne">
                         <input type="text" id="nombre" name="nombre" placeholder="Nombre" required class="widthOne">
                     </div>
@@ -115,7 +117,7 @@
                             <option value="SUV">
                         </datalist>
                     </div>
-<div class="spaceOne">
+                    <div class="spaceOne">
                         <p>Comentarios Adicionales</p>
                         <textarea name="message"
                             placeholder="Deje aqui cualquier comentario adicional o requerimiento extra no cubierto en este formulario"
@@ -124,8 +126,8 @@
                 </div>
             </fieldset>
             <div class="spaceTwo">
-            <input type="submit" value="Submit">
-        </div>
+                <input type="submit" value="Submit">
+            </div>
         </form>
 
     </main>
