--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
                     <img src="img/flota.jpg" alt="icono de un auto representanto nuestra flota de vehiculos"
                         class="imageTwelve">
                     <h2 class="containerTen fontSizeThree">Flota Moderna</h2>
-                    <p class="containerEleven  fontSizeSix"> Nuestra flota de vehículos de última generación refleja nuestro
+                    <p class="containerEleven  fontSizeSix"> Nuestra flota de vehículos de última generación refleja
+                        nuestro
                         compromiso con la calidad y la seguridad, ofreciendo a los clientes una experiencia de alquiler
                         con vehículos modernos y tecnológicamente avanzados.
                     </p>
@@ -98,14 +99,16 @@
                 <div class="containerFour">
                     <img src="img/kms.jpg" alt="un icono de una ruta" class="imageTwelve">
                     <h2 class="containerTen fontSizeThree">Kilometros Ilimitados</h2>
-                    <p class="containerEleven  fontSizeSix"> En Aspen Rental, todos nuestros vehículos se rentan con kilometraje
+                    <p class="containerEleven  fontSizeSix"> En Aspen Rental, todos nuestros vehículos se rentan con
+                        kilometraje
                         ilimitado sin cargos adicionales, brindando a los clientes la libertad de disfrutar de sus
                         viajes sin restricciones ni costos sorpresa.</p>
                 </div>
                 <div class="containerFour">
                     <img src="img/checkin.jpg" alt="icono de un express check in" class="imageTwelve">
                     <h2 class="containerTen fontSizeThree">Check in express</h2>
-                    <p class="containerEleven  fontSizeSix">Simplificamos el proceso de alquiler con nuestro servicio de check-in
+                    <p class="containerEleven  fontSizeSix">Simplificamos el proceso de alquiler con nuestro servicio de
+                        check-in
                         express, permitiendo a los clientes ahorrar tiempo y comenzar su viaje de manera rápida y
                         eficiente.
                     </p>
@@ -117,7 +120,8 @@
                         alt="icono de un carrito de compras representando la devolución del vehiculo"
                         class="imageTwelve">
                     <h2 class="containerTen fontSizeThree">Entrega/Devolucion en Hotel/Aeropuerto</h2>
-                    <p class="containerEleven  fontSizeSix">Ofrecemos la conveniencia de la entrega y devolución de vehículos en
+                    <p class="containerEleven  fontSizeSix">Ofrecemos la conveniencia de la entrega y devolución de
+                        vehículos en
                         hoteles y aeropuertos sin costos adicionales, facilitando a nuestros clientes un proceso de
                         alquiler sin complicaciones.</p>
                 </div>
@@ -125,7 +129,8 @@
                     <img src="img/conductor.jpg" alt="icono de dos personas representando un conductor adicional"
                         class="imageTwelve">
                     <h2 class="containerTen fontSizeThree">Conductor Adicional</h2>
-                    <p class="containerEleven  fontSizeSix">Reconociendo la importancia de compartir la experiencia de conducción, en
+                    <p class="containerEleven  fontSizeSix">Reconociendo la importancia de compartir la experiencia de
+                        conducción, en
                         Aspen Rental permitimos conductores adicionales sin costos extras, brindando flexibilidad y
                         colaboración en los viajes.</p>
                 </div>
@@ -134,14 +139,16 @@
                         alt="icono de un carrito de bebe representando la silla de infante para el auto"
                         class="imageTwelve">
                     <h2 class="containerTen fontSizeThree">Silla de Infante</h2>
-                    <p class="containerEleven  fontSizeSix">Priorizando la seguridad de los más pequeños, proporcionamos sillas de
+                    <p class="containerEleven  fontSizeSix">Priorizando la seguridad de los más pequeños, proporcionamos
+                        sillas de
                         infante de forma gratuita con cada alquiler, garantizando a los clientes una experiencia de
                         viaje segura en familia.</p>
                 </div>
                 <div class="containerFour">
                     <img src="img/charger.jpg" alt="icono representando un cargador de auto" class="imageTwelve">
                     <h2 class="containerTen fontSizeThree">Cargador de Celular</h2>
-                    <p class="containerEleven  fontSizeSix">Pensando en la conectividad, todos nuestros vehículos están equipados con
+                    <p class="containerEleven  fontSizeSix">Pensando en la conectividad, todos nuestros vehículos están
+                        equipados con
                         cargadores de celulares, asegurando que los clientes estén siempre conectados y listos para
                         cualquier viaje.</p>
                 </div>
